tests/paczka2/big_fuzzy/90213391.err
Error in line 1: teio42zFV S858 69,48
Error in line 19: 0iC6g6VX S866 -1,8
Error in line 25: Wx08TVHf A367 98,0
Error in line 10: teio42zFV S858 79,4
Error in line 31: 4Qx8K A367 63,6
Error in line 23: 0iC6g6VX S866 334,5
Error in line 56: teio42zFV S866 20,5
Error in line 77: Wx08TVHf S331 -4,6
Error in line 71: 67cVc S331 25,1
Error in line 82: A367 S866 71,1
Error in line 84: Efcbe72Q S866 22,0
Error in line 95: Efcbe72Q S331 61,3
Error in line 103: teio42zFV S858 66,7
Error in line 107: 4Qx8K S866 20,7
Error in line 112: 67cVc S866 45,3
Error in line 116: 67cVc S331 -1,6
Error in line 119: A367 A367 2,4
Error in line 114: 67cVc S331 6,8
Error in line 124: 67cVc S866 48,3
Error in line 142: teio42zFV S331 198,32
Error in line 156: 4QxvK Sv66 176,0
Error in line 141: Wx08TVHf S331 1,1
Error in line 153: 4Qx8K S866 83,0
Error in line 154: teio42zFV S331 241,9
Error in line 167: Efcbe72Q S331 33,2
Error in line 168: A367 S858 43,9
Error in line 169: Efcbe72Q A367 43,8
Error in line 161: 4Qx8K S331 436,0
Error in line 185: 67cVc S858 33,5
Error in line 186: 67cVc A367 35,6
Error in line 187: 67cVc S866 5,7
Error in line 192: A367 S331 85,4
Error in line 201: A367 S866 -2,0
Error in line 189: 67cVc S331 57,7
Error in line 204: 67cVc S866 79,8
Error in line 194: A367 S866 65,0
Error in line 198: Wx08TVHf S331 5,5
Error in line 205: Efcbe72Q A367 87,4
Error in line 218: Wx08TVHf S331 53,7
Error in line 225: 0iC6g6VX S866 74,5
Error in line 219: Wx08TVHf S866 24,8
Error in line 226: 0iC6g6VX S858 84,0
Error in line 242: teio42zFV S866 54,3
